--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.timothyking.open_weather">
+
+   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
    <application
-        android:label="open_weather"
+        android:label="OpenWeather"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
